[package]
name = "rustzkrypt"
version = "0.1.0"
edition = "2021"
authors = ["RustZkrypt Contributors"]
description = "A blazing-fast, privacy-first cryptographic toolkit and zero-knowledge infrastructure layer"
license = "MIT"
repository = "https://github.com/your-username/rustzkrypt"

[lib]
name = "rustzkrypt"
path = "src/lib.rs"

[[bin]]
name = "rustzkrypt-cli"
path = "cli/main.rs"

[dependencies]
# Cryptographic primitives
aes-gcm = "0.10"
ed25519-dalek = "2.1"
sha2 = "0.10"
curve25519-dalek = "4.1"
x25519-dalek = "2.0"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Zero-knowledge proof systems
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-serialize = "0.4"

# Networking
libp2p = { version = "0.53", features = ["tcp", "websocket", "noise", "mplex", "yamux"] }
tokio = { version = "1.36", features = ["full"] }
async-trait = "0.1"

# Serialization & utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"
proptest = "1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3 