[package]
name = "rustzkrypt-wasm"
version = "0.1.0"
edition = "2021"
authors = ["RustZkrypt Contributors"]
description = "WebAssembly bindings for RustZkrypt"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustzkrypt = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
console_log = "1.0"
log = "0.4"
base64 = "0.21"

[dev-dependencies]
wasm-bindgen-test = "0.3" 